--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>   
 
     </head>
-    <body background="background.jpg">
+    <body background="background1.jpg">
         <center>
           <div class="btn btn-primary heading">
             <h3>AI PING PONG</h3>
             <button class="btn btn-danger" data-toggle="modal" data-target="#myModal">Instructions</button>
           </div>
-  
-          <img src="background1.jpg" class="big_image">
-          <br><br>
           <button class="btn btn-success" onclick="startGame()" id="start">Play Game</button>
           <br><br>
           <h3 id="status" class="btn btn-warning"></h3>
           <br><br>
           <div id="canvas"></div>
-          <div id="game_console"></div>
 
           <div id="myModal" class="modal fade">
             <div class="modal-dialog">
