--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>AI PING PONG</h3>
             <button class="btn btn-danger" data-toggle="modal" data-target="#myModal">Instructions</button>
           </div>
-          <button class="btn btn-success" onclick="startGame()" id="start">Play Game</button>
+          <button class="btn btn-success" onclick="startGame();" id="start">Play Game</button>
           <br><br>
           <h3 id="status" class="btn btn-warning"></h3>
           <br><br>
