--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <h3 id="status" class="btn btn-warning"></h3>
           <br><br>
           <div id="canvas"></div>
+          <br><br>
+          <button class="btn btn-info" onclick="restart();"> Restart </button>
 
           <div id="myModal" class="modal fade">
             <div class="modal-dialog">
